[gd_scene load_steps=3 format=3 uid="uid://3r8vht8t5e7a"]

[ext_resource type="Script" path="res://menu.gd" id="1_sn0qw"]
[ext_resource type="Texture2D" uid="uid://c2bxvndavufm" path="res://phone_bg.jpeg" id="2_k84xi"]

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_sn0qw")

[node name="Background" type="TextureRect" parent="." groups=["hidable_menu"]]
modulate = Color(0.446777, 0.446777, 0.446777, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k84xi")

[node name="NameContainer" type="FlowContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.134
anchor_right = 0.5
anchor_bottom = 0.134
offset_left = -79.0
offset_top = -16.4
offset_right = 80.0
offset_bottom = 59.6

[node name="title" type="Label" parent="NameContainer" groups=["hidable_menu"]]
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "Brane"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartButtonContainer" type="FlowContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.688
anchor_right = 0.503
anchor_bottom = 0.688
offset_left = -35.0
offset_top = -98.8
offset_right = 57.81
offset_bottom = -41.8

[node name="StartButton" type="Button" parent="StartButtonContainer" groups=["hidable_menu"]]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Start"

[node name="NumberSizeContainer" type="FlowContainer" parent="." groups=["hidable_menu"]]
anchors_preset = -1
anchor_left = 0.807
anchor_top = 0.145
anchor_right = 0.807
anchor_bottom = 0.145
offset_left = -349.11
offset_top = 208.0
offset_right = -79.11
offset_bottom = 257.0

[node name="Label" type="Label" parent="NumberSizeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "number size"

[node name="OptionButton" type="OptionButton" parent="NumberSizeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="ListSizeContainer" type="FlowContainer" parent="." groups=["hidable_menu"]]
anchors_preset = -1
anchor_left = 0.806
anchor_top = 0.145
anchor_right = 0.806
anchor_bottom = 0.145
offset_left = -348.38
offset_top = 391.0
offset_right = -195.38
offset_bottom = 445.0

[node name="Label" type="Label" parent="ListSizeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "focus"

[node name="OptionButton" type="OptionButton" parent="ListSizeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="ComplexityContainer" type="FlowContainer" parent="." groups=["hidable_menu"]]
anchors_preset = -1
anchor_left = 0.806
anchor_top = 0.145
anchor_right = 0.806
anchor_bottom = 0.145
offset_left = -348.38
offset_top = 571.0
offset_right = -136.38
offset_bottom = 620.0

[node name="Label" type="Label" parent="ComplexityContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "difficulty"

[node name="OptionButton" type="OptionButton" parent="ComplexityContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[connection signal="pressed" from="StartButtonContainer/StartButton" to="." method="start"]
[connection signal="item_selected" from="NumberSizeContainer/OptionButton" to="." method="_on_number_size_selected"]
[connection signal="item_selected" from="ListSizeContainer/OptionButton" to="." method="_on_list_size_selected"]
[connection signal="item_selected" from="ComplexityContainer/OptionButton" to="." method="_on_complexity_selected"]
